# stemcell

./: .dockerignore  .gitignore  .modum-baseline.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  TESTING.md  _typos.toml  build-profiles.toml  build.rs  build.sh  build_toggles.toml  commands.toml.example  config.toml.example  deny.toml  keys.toml.example  parse_test.rs  rtk_filters.toml.example  target  test_load.rs  tools.toml.example  usage_pricing.toml.example
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/superpowers/specs/: 2026-06-07-channel-gateway-design.md  2026-06-07-startup-jobs-design.md
src/: lib.rs  main.rs  pricing.rs
src/a2a/: agent_card.rs  mod.rs  server.rs  test_helpers.rs  types.rs
src/a2a/handler/: send.rs
src/benches/: database.rs  memory.rs
src/brain/: AGENTS.md  commands.rs  dedup_scan.rs  filter.rs  mod.rs  plans.rs  prompt_builder.rs  prompt_builder_tests.rs  rsi.rs  rsi_git_history.rs  rsi_proposals.rs  rsi_pruned.rs  rsi_subsystem.rs  rsi_sync.rs  self_update.rs  skills.rs  token_calibration.rs
src/brain/agent/: context.rs  error.rs  mod.rs
src/brain/kg/: compose.rs  git_review.rs  mod.rs  parser.rs  resolver.rs  review.rs  sync.rs  traverse.rs  vault.rs
src/brain/mission_control/: activity_service.rs  inbox_service.rs  mod.rs  schedule_service.rs  types.rs
src/brain/provider/: anthropic.rs  bare_tool_call_extractor.rs  claude_cli.rs  codex_cli.rs  codex_oauth.rs  copilot.rs  custom_openai_compatible.rs  error.rs  factory.rs  fallback.rs  gemini.rs  json_repair.rs  mod.rs  model_fetch.rs  nonstream_compat.rs  opencode_cli.rs  qwen.rs  qwen_code.rs  rate_limiter.rs  retry.rs  rig_adapter.rs  rotating_qwen.rs  streaming_utils.rs  trait.rs  types.rs
src/brain/tools/: a2a_send.rs  analyze_image.rs  analyze_video.rs  bash.rs  brain_file_safety.rs  brave_search.rs  channel_search.rs  code_exec.rs  config_tool.rs  context.rs  cron_manage.rs  discord_connect.rs  discord_send.rs  doc_parser.rs  edit.rs  error.rs  evolve.rs  exa_search.rs  feedback_analyze.rs  feedback_record.rs  follow_up_question.rs  fuzzy.rs  generate_image.rs  glob.rs  grep.rs  http.rs  kg_context.rs  kg_links.rs  kg_note.rs  kg_read.rs  kg_remember.rs  kg_search.rs  load_brain_file.rs  load_brain_file_tests.rs  ls.rs  memory_search.rs  mod.rs  modules.rs  notebook.rs  plan_tool.rs  (+25 more)
src/channels/: AGENTS.md  commands.rs  discord_surface.rs  factory.rs  greeting.rs  manager.rs  mod.rs  session_init.rs  session_resolve.rs  slack_surface.rs  telegram_surface.rs  tests.rs  trello_surface.rs  tui_surface.rs  whatsapp_surface.rs
src/channels/discord/: agent.rs  follow_up_question.rs  handler.rs  mod.rs
src/channels/gateway/: bus.rs  envelope.rs  mod.rs  registry.rs  surface.rs
src/cli/: AGENTS.md  args.rs  commands.rs  crash_recovery.rs  cron.rs  mod.rs  ui.rs
src/config/: AGENTS.md  crabrace.rs  health.rs  mod.rs  profile.rs  secrets.rs  types.rs  update.rs
src/cron/: mod.rs  scheduler.rs
src/db/: AGENTS.md  database.rs  mod.rs  models.rs
src/docker/: .dockerignore  Dockerfile  compose.yml
src/error/: mod.rs  types.rs
src/logging/: logger.rs
src/memory/: embedding.rs  index.rs  mod.rs  search.rs  store.rs
src/migrations/: 20251028000001_initial_schema.sql  20260412000001_add_feedback_ledger.sql  20260415000001_add_tool_executions.sql  20260415000002_add_session_category.sql  20260415000003_fix_tool_executions_schema.sql  20260416000001_add_message_input_tokens.sql  20260421000001_add_message_thinking.sql  20260426000001_add_recent_paths.sql  20260507000001_add_cron_deliver_api_key.sql  20260517000001_cron_jobs_text_recast.sql  20260522000001_add_auto_title_attempted.sql  20260529000001_add_channel_thread_id.sql  20260611000001_add_knowledge_graph.sql  20260613000001_add_kg_pending_batch.sql
src/registry/: DynamicToolRegistry.rs
src/rtk/: mod.rs  rewrite.rs  tracker.rs
src/scripts/: check-wiki.sh  install.sh  setup.sh  tool_features.py
src/services/: message.rs  session.rs
src/startup/: job.rs  mod.rs  model_cache.rs  registry.rs
src/tests/: AGENTS.md  agent_approval_policies_test.rs  agent_basic_test.rs  agent_context_tracking_test.rs  agent_model_selection_test.rs  agent_parallel_sessions_test.rs  agent_service_mocks.rs  agent_streaming_usage_test.rs  agent_tool_normalization_test.rs  analysis_intent_nudge_test.rs  auto_title_e2e_test.rs  auto_title_test.rs  background_session_test.rs  baseline_merge_test.rs  bash_feedback_enrichment_test.rs  bash_interactive_reject_test.rs  bash_posix_quote_test.rs  bash_retry_loop_test.rs  bash_ssh_detection_test.rs  brain_file_generic_guard_test.rs  brain_file_safety_test.rs  brain_filter_strip_empty_sections_test.rs  brain_templates_test.rs  browser_close_test.rs  browser_default_linux_test.rs  browser_default_test.rs  browser_default_windows_test.rs  browser_drop_test.rs  browser_e2e_test.rs  browser_eval_cap_test.rs  browser_find_test.rs  browser_health_test.rs  browser_locks_test.rs  browser_profile_wait_test.rs  browser_screenshot_surface_test.rs  browser_session_test.rs  browser_stealth_test.rs  bundled_plans_test.rs  candle_whisper_test.rs  channel_commands_test.rs  (+198 more)
src/tui/: AGENTS.md  events.rs  markdown.rs  mod.rs  model_search.rs  onboarding_render.rs  plan.rs  plan_tests.rs  provider_selector.rs  runner.rs  splash.rs
src/tui/app/: mod.rs  (+5 more)
src/usage/: cards.rs  categorizer.rs  dashboard.rs  data.rs  mod.rs  pricing.rs
src/utils/: approval.rs  config_watcher.rs  fd_suppress.rs  file_extract.rs  git_branch.rs  image.rs  install.rs  mod.rs  pdf_vision.rs  providers.rs  retry.rs  sanitize.rs  string.rs  text_complete.rs  tool_context.rs
wiki/: agent-quickstart.md  change-map.md  contracts.md  contributing-agent-rules.md  coverage-manifest.md  entrypoints.md  flows.md  index.md  source-map.md  verification-testing.md  verification.md
wiki/architecture/: boundaries.md  index.md
wiki/start/: WIZARD.md
(+234 files in other folders)
